Change License to MIT

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "train"
   ],
   "author": "Percipient24",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ChainGangChase/game/issues"
   },
