--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/ChainGangChase/game#readme",
   "dependencies": {
     "cgc-art": "git@github.com:ChainGangChase/cgc-art.git#0.1.0",
-    "cgc-sound": "git@github.com:ChainGangChase/cgc-sound.git#0.1.0"
+    "cgc-sound": "git@github.com:ChainGangChase/cgc-sound.git#0.1.0",
+    "cgc-i18n": "git@github.com:ChainGangChase/cgc-i18n.git#0.0.1"
   }
 }
